Attempts to fix responsiveness issue with overflowing top content

--- a/style/style.css
+++ b/style/style.css
@@ -76,10 +76,11 @@ body{
     font-family: "Montserrat", Arial, Helvetica, sans-serif;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: safe center;
+    justify-content: safe center;
     font-size: 24px;
 }
+
 
 h1{
     color: #A66122;
@@ -149,13 +150,19 @@ footer{
     color: #13371D;
     font-weight: 500;
     font-size: 14px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+footer p{
+text-align: center;
 }
 footer a{
     color: #B2BA51;
     text-decoration: none;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 600px) {
     .calculator{
         width: 286px;
         height: 493px;
@@ -167,6 +174,17 @@ footer a{
     .calculator .dial button{
         width: 56px;
         height: 56px;
+        border-radius: 18px;
     }
+    footer{
+        margin-bottom: 40px;
+    }
+
+}
+@media (max-height: 715px) {
+    h1{
+        margin-top: 55px;
+    }
+    
     
 }
